<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Conversion"
    tools:showIn="@layout/conversion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/L1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
           >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="" />
            <EditText
                android:id="@+id/Q1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:ems="10"
                android:hint="______"
                android:maxLength="7"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="公斤(kg)"
                android:textSize="24sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/L2"
            android:layout_below="@id/L1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/Q2"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="center"
                android:textSize="24sp"
                android:maxLength="7"
                android:hint="______"
                android:inputType="number" />

            <TextView
                android:id="@+id/T2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="公斤(kg)" />

            <EditText
                android:id="@+id/Q3"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textAlignment="center"
                android:textSize="24sp"
                android:maxLength="7"
                android:hint="______"
                android:inputType="number" />

            <TextView
                android:id="@+id/T3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="公克(g)" />
        </LinearLayout>

        <Button
            android:id="@+id/btok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/L2"
            android:text="OK" />

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btok"
            android:textSize="25sp"
            android:text="1公斤(kg)=1000公克(g)\n1公克(g)=0.001公斤(kg)" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/show"
            android:inputType="textPersonName"
            android:hint="Name" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>