...
            android:layout_marginTop="10dp"
            android:hint="12223">


        </EditText>
        <EditText
            android:id="@+id/acc2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/acc"
            android:layout_marginTop="10dp"
            android:hint="手機號碼">

...
        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/acc2"
            android:layout_marginTop="15dp"
            android:text="login" />

        <com.grade3.sqltest.DragFloatActionButton
            android:id="@+id/img_btnw"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/btn"
...
